# MU_PLATFORM_ROCKCHIP

./: .gitignore  .gitmodules  PlatformBuild.py  README.md  mkrun.sh  pip-requirements.txt  run.sh
ARM/: ARM.dec
IPL/: 0001-Ignore-false-positive-stringop-overflow-warning.patch  0002-Fix-linking-with-GCC-12.2.0.patch  0003-Enable-ELF-loading-via-dramstage.patch  0004-Minimal-Build.patch  0005-Boot-BL31-BL32-BL33-from-RAM.patch  CMakeLists.txt  README.md
JTAG/rk3399/: openocd_rk3399.cfg
Microsoft/MsPkg/: MsPkg.dsc
Microsoft/MsPkg/Application/AuthVarTest/: AuthVarTest.inf
Microsoft/MsPkg/Application/StorageTest/: StorageTest.inf
Microsoft/MsPkg/Drivers/SdMmcDxe/: SdMmcDxe.inf
Microsoft/OpteeClientPkg/Application/OpteeClientApiTest/: OpteeClientApiTest.inf
Microsoft/OpteeClientPkg/Drivers/AuthVarOpteeRuntimeDxe/: AuthVarsDxe.inf
SecureBoot/: .gitignore  README.md
SecureBoot/patches/: 0001-Fix-for-aarch64-linux-gnu-gcc-12.2.1.patch  0001-USB-load-to-RAM-config.patch
SecureBoot/patches/fTPM/: 0001-add-enum-to-ta-flags.patch
Silicon/ARM/TFA/docs/: requirements.txt
Silicon/Rockchip/Rk3399Pkg/: Rk3399CommonDsc.inc  Rk3399CommonFdf.inc  Rk3399Pkg.dec
Silicon/Rockchip/Rk3399Pkg/AcpiTables/: Csrt.aslc  Dbg2.aslc  Fadt.aslc  Gtdt.aslc  Madt.aslc  Rk3399Platform.h  Tpm2.aslc
Silicon/Rockchip/Rk3399Pkg/Include/: Rk3399.h  (+5 more)
Silicon/Rockchip/RkPlatformPkg/: RkPlatformPkg.dec
dtb/: rk3399-pinebook-pro.dtb
patches/: 0001-Enable-FDT.patch
tools/: .gitignore  build.sh  build_uefi.sh  extractbl31.py  extractelf.py  image-sd.its  mksdimg.sh  uefi.its
(+48 files in other folders)
